--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,25 @@
 /*
+
+I am so fucking sorry to anyone that tries to read this
+
 General CSS
 */
 
 body {
     margin:0px;
     font-size: 1rem;
+    font-family: Helvetica, sans-serif;
+}
+
+body .main {
+    margin: 16px
+}
+
+h1 {
+    font-size: 2rem;
+    margin: 0px;
+    padding: 8px 0px 8px 0px;
+    font-weight: normal;
 }
 
 /* 
@@ -53,6 +68,10 @@ header nav ul li a {
     color:black;
 }
 
+header nav ul li a:hover{
+    background-color:rgb(84, 152, 175);
+}
+
 header #logo {
     display:inline;
     height: 40px;
@@ -63,17 +82,6 @@ header #logo {
 /*
 Teacher Homepage Content CSS
 */
-
-body .main {
-    margin: 16px
-}
-
-h1 {
-    font-size: 2rem;
-    margin: 0px;
-    padding: 8px 0px 8px 0px;
-    font-weight: normal;
-}
 
 #projects {
     width: 100%;
@@ -145,4 +153,123 @@ form {
     background-color: rgb(238, 67, 67);
     border: 1px solid gray;
     border-radius: 4px;
+}
+
+/* Student Project Page CSS */
+
+.student-block-header{
+    display:flex;
+    width:100%;
+    border: 3px solid black;
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
+}
+
+.in{
+    flex-basis:75%;
+    flex-grow: 3;
+    border-right: 3px solid black;
+}
+
+.out{
+    flex-basis:25%;
+    flex-grow: 1;
+}
+
+.in, .out {
+    display: inline-block;
+    font-size: 2rem;
+    padding:4px;
+}
+
+.block-container h2 {
+    margin:0;
+    font-weight: normal;
+}
+
+.block-container{
+    width: 100%;
+    list-style: none;
+    padding:0;
+    margin:0;
+    border: 3px solid black;
+    border-top: none;
+    border-bottom-left-radius: 8px;
+    border-bottom-right-radius: 8px;
+    display:flex;
+    flex-flow:wrap;
+    flex-direction: row;
+}
+
+.block-container h2{
+    padding: 4px;
+}
+#input-block-1, #operator-block, #input-block-2{
+    flex-basis: calc(25% - 2px);
+    display:inline-block;
+    border-right: 1px solid black;
+    border-bottom: 1px solid black;
+    height: calc(20vw);
+}
+
+#output-block{
+    flex-basis: calc(25% + 3px);
+    border-bottom: 1px solid black;
+}
+
+#input-block-1 h2{
+    background-color: #FB7D44;
+    border-bottom: 1px solid black;
+}
+
+#operator-block h2{
+    background-color: #2A92BF;
+    border-bottom: 1px solid black;
+}
+
+#input-block-2 h2{
+    background-color: #F4CE46;
+    border-bottom: 1px solid black;
+}
+
+#output-block h2{
+    background-color: #00B961;
+    border-bottom: 1px solid black;
+}
+
+#block-bank
+{
+    display:block;
+    flex-basis:100%;
+    height: calc(20vw);
+}
+
+.block-bank-header {
+    background-color: #979797;
+    border-bottom: 1px solid black;
+}
+
+.block{
+    display:block;
+    width: 100%;
+    height: calc(100% - 2rem - 4px);
+    padding:8px;
+    box-sizing: border-box;
+    background-color: lightblue;
+    background-clip: content-box;
+    border-radius: 32px;
+    text-align: center;
+    font-size: 8rem;
+    font-weight: bold;
+    
+}
+
+.block:hover{
+    background-color: rgb(126, 156, 167);
+}
+
+#block-bank .block{
+    display:inline-block;
+    box-sizing: border-box;
+    width: 24.7%;
 }
